Closed
Bug 168378
Opened 22 years ago
Closed 19 years ago
Drag to page containing INPUT elements tries to use the dragged text as URL
Categories
(Camino Graveyard :: Drag & Drop, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: the_nezz, Assigned: sfraser_bugs)
References
Details
(Keywords: fixed1.8)
Attachments
(1 file)
1.89 KB,
patch
|
Details | Diff | Splinter Review |
Case: dragging of arbitrary text from a text source (mailer,text editor etc.) to
a Chimera window containing INPUT TYPE=TEXT or TEXTAREA elements.
Expected results: insertion of text into the input element
Current results: browsers tries to use the text as URL and open it
Details: Mac OS 10.1.5, Chimera 0.5, dragging from BBEdit
On Mozilla (1.0.1) this dragging works correctly
Confirmed using Chimera/2002090913 on 10.1.5. Dropping text on a text input
element doesn't paste the text into the element as it does in Mozilla.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•21 years ago
|
||
fixed with 2003090102 on 10.2.6.
Comment 3•21 years ago
|
||
If this bug is fixed shouldn't it be closed?
This bug is not fixed. Try it on this bug page.
You can drag text into the comment field but not in the find bug field.
Heh, that's wacky. I was trying to see if this was a dupe of 274641 or 225862,
and trying to drag something into the "Find Bug #" field instead inserts it into
this comments field (which otherwise refuses to accept drags, opposite of what
Jasper says in comment 4). Camino 2004121208 (v0.8+), Mac OS X 10.3.6
I'm going to add these textarea/form drag-drop bugs to the 1.0 list, since
proper drag-drop seems like a basic operation to expect from a 1.0 release :-)
Summary: Drag to INPUT elements tries to use the dragged text as URL → Drag to page containing INPUT elements tries to use the dragged text as URL
Target Milestone: --- → Camino1.0
Assignee | ||
Comment 7•20 years ago
|
||
See also bug 185943 (which is the converse of this one)
Assignee | ||
Comment 9•19 years ago
|
||
This would seem to be because of this:
// XXXPINK
// hack, because we're currently getting the point in Carbon global coordinates,
// but obviously the cocoa views don't know how to convert those (because they
// use an entirely different coordinate system).
geckoEvent.refPoint.x = 50; geckoEvent.refPoint.y = 50;
in nsChildView::DragEvent
Status: NEW → ASSIGNED
Assignee | ||
Comment 10•19 years ago
|
||
Assignee | ||
Comment 11•19 years ago
|
||
Fixed on trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 12•19 years ago
|
||
*** Bug 185943 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•