Fix bug 168378: make sure that we correctly set up the event coordinates in drop events. Camino only, r/sr=me